syntax = "proto3";

package runtime.v1;

option go_package = "github.com/frantjc/sequence/runtime/v1;runtimev1";

message Volume {
  string source = 1;
}

service VolumeService {
  rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse);
  rpc GetVolume(GetVolumeRequest) returns (GetVolumeResponse);
  rpc RemoveVolume(RemoveVolumeRequest) returns (RemoveVolumeResponse);
  rpc PruneVolumes(PruneVolumesRequest) returns (PruneVolumesResponse);
}

message CreateVolumeRequest {
  string name = 1;
}

message CreateVolumeResponse {
  runtime.v1.Volume volume = 1;
}

message GetVolumeRequest {
  string name = 1;
}

message GetVolumeResponse {
  runtime.v1.Volume volume = 1;
}

message RemoveVolumeRequest {
  string name = 1;
}

message RemoveVolumeResponse {}

message PruneVolumesRequest {}

message PruneVolumesResponse {}
